set java home when running.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Compile
       run: ./compile.sh
     - name: Run
-      run: ./hello-world
+      run: ./hello-world -Djava.home="$HOME/graalvm/"
 
