see if it works without java home set.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,5 +30,6 @@ jobs:
     - name: Compile
       run: ./compile.sh
     - name: Run
-      run: ./hello-world -Djava.home="$HOME/graalvm/"
+      run: ./hello-world
+      # run: ./hello-world -Djava.home="$HOME/graalvm/"
 
