try running inside of xvfb.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Compile
       run: ./compile.sh
     - name: Run
-      run: ./hello-world
+      run: xvfb-run ./hello-world
       # run: ./hello-world -Djava.home="$HOME/graalvm/"
 
